# second-scrapper-proyecy

./: .gitignore  CMakeLists.txt  README.md
include/: CrawlStats.h  TreeExporter.h  TreeNode.h  WebCrawler.h
src/: CMakeLists.txt
src/business/: TreeExporter.cpp  TreeNode.cpp  WebCrawler.cpp  dummy.cpp
tests/: CMakeLists.txt  Test_TreeExporter.cpp  Test_TreeNode.cpp  Test_WebCrawler.cpp
